bug: fix ascents count being wrong, grade statistic counting duplicate routes
